feat: authentication, sync and updater (#9)
* WIP: some auth developing

* feat: auth endpoint

* feat: complete auth endpoints

* feat: updater
