# api/internal/core/domain/auth.go
@@ -1,0 +1,8 @@
+package domain
+
+import "time"
+
+type AuthPayload struct {
+	AccessToken string
+	ExpiresAt   time.Time
+}
